# proposal-engine

./: .claudeignore  .gitignore  CLAUDE.md  DIRECTORY_STRUCTURE.md  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  render.yaml
.claude/commands/: check-cost.md  new-supplier-pipeline.md  review-contract-change.md  run-evals.md
.github/workflows/: ci.yml  deploy.yml  eval-gate.yml  regression-gate.yml
agents/: README.md
agents/classifier/: AGENT.md
agents/header_extractor/: AGENT.md
agents/line_item_extractor/: AGENT.md
agents/pdf_parser/: AGENT.md
agents/pipeline_c_fallback/: AGENT.md
agents/recovery_agent/: AGENT.md
agents/totals_extractor/: AGENT.md
app/: main.py
app/api/: __init__.py  auth.py  contractors.py  events.py  routes.py
commercial/: CONTRACTOR_DIAGNOSTIC_PLAYBOOK.md  PILOT_AGREEMENT_TEMPLATE.md  WEEKLY_TRACKING_DASHBOARD.md
contracts/: __init__.py  classifier.py  contractor.py  envelope.py  errors.py  events.py  extraction.py  parse.py  proposal.py  review.py
core/: config.py  db.py  llm.py  message_bus.py  streaming.py
docs/: AWS_SETUP.md  DEPLOYMENT.md  DIRECTORY_STRUCTURE.md  EVALS.md  EXTRACTION_ARCHITECTURE.md  RENDER_DEPLOY.md
docs/adr/: 001-orchestration-architecture.md  002-money-decimal.md  003-token-economics.md  004-saas-positioning.md
eval/: README.md  run_evals.py
eval/goldens/: classifier_v1.jsonl  line_items_v1.jsonl  parse_v1.jsonl  pricing_v1.jsonl  recovery_v1.jsonl
eval/judges/: __init__.py  extraction_judge.py  qualifier_judge.py
eval/results/: baseline.json
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuthGate.tsx  ReviewSurface.tsx
frontend/lib/: api.ts  supabase.ts
future/lead-gen/: README.md
harness/: README.md  __init__.py  audit.py  budget.py  document_preparer.py  escalation.py  handoff.py  hooks.py  instrumentation.py  model_capabilities.py  models.py  observability.py  policy_gate.py  prompt_assembler.py  quality_judge.py  retry.py  sandbox.py  tracing.py
infra/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
infra/terraform/: .gitignore  PLAN.md  alb.tf  ecr.tf  ecs.tf  github_oidc.tf  logs.tf  main.tf  security.tf  variables.tf
integrations/extend/: __init__.py  client.py
memory/: README.md  cache.py  learned_store.py  retrieval_store.py  static_store.py  working_state.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_owner_id.py
pipelines/: classifier.py  orchestrator.py  parsing.py  proposal_builder.py  proposal_renderer.py  validation_gate.py
pipelines/parse_pipeline/: run.py
pipelines/pipeline_a/: __init__.py  run.py
pipelines/pipeline_b/: __init__.py  run.py
pipelines/pipeline_c/: __init__.py  run.py
policies/: budget_policy.json  compression_policy.json  eval_gate_policy.json  human_review_policy.json  model_routing_policy.json  observability_policy.json  pdf_parser_policy.json  safety_tool_policy.json  tool_permission_policy.json
proposal_engine_mcp/: __init__.py  __main__.py  http.py
proposal_engine_mcp/domain/: contractors.py  proposals.py  suppliers.py
proposal_engine_mcp/handlers/: contractors.py  dispatch.py  proposals.py  suppliers.py
rag/: README.md  __init__.py  contractor_context.py  embeddings.py  few_shot_selector.py  supplier_catalog.py
scripts/: label_pdfs.py  shadow_compare.py
skill_opt/: README.md  edit_budget.py  edits.py  eval_adapter.py  export.py  models.py  optimizer.py  optimizer_client.py  reflection.py  rejected_buffer.py  scoring.py  validation_gate.py
skill_opt/tests/: test_optimizer_wired.py
skills/: README.md
skills/extract-supplier-quote/: SKILL.md
tests/: __init__.py  conftest.py  test_auth.py  test_contractors.py  test_contracts.py  test_evals.py  test_extend_parser.py  test_extraction_pipelines.py  test_orchestrator.py  test_parsing.py  test_proposal_builder.py  test_proposal_renderer.py  test_recovery.py  test_remediation.py  test_review_api.py  test_validation_gate.py
(+3 files in other folders)
