[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "contracts",
    "core",
    "harness",
    "pipelines",
    "agents",
    "memory",
    "rag",
    "eval",
    "app",
    "proposal_engine_mcp",
]

[project]
name = "proposal-engine"
version = "0.1.0"
description = "AI-powered contractor proposal generation from supplier quotes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.49.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.3.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests use descriptive Job-numbered class names and set env vars before imports.
"tests/**" = ["N801", "B017", "E402", "E741"]
# FastAPI's Depends()/File() in argument defaults is the framework's idiom.
"app/api/*.py" = ["B008"]
# Contract error names are part of the public API and are suffix-free by design.
"contracts/errors.py" = ["N818"]
# Extraction prompts are long string literals that must not be reflowed.
"pipelines/**/run.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
